[package]
name = "reikland"
authors = ["Adam Stopher <adam.stopher@protonmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bit-vec = "0.9.1"
lexical-parse-float = "1.0.6"
num-bigint = "0.4.6"
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
str_enum = { version = "0.3.2", features = ["phf", "serde"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
itertools = "0.14.0"
