[package]
name = "reikland"
authors = ["Adam Stopher <adam.stopher@protonmail.com>"]
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A serde-compatible Ruby marshal parser and deserializer"
repository = "https://github.com/SneedSeedFeed/reikland"
documentation = "https://docs.rs/reikland"
keywords = ["marshal", "ruby", "serde", "parser", "deserialize"]
categories = ["parser-implementations", "parsing"]


[dependencies]
bit-vec = "0.9.1"
lexical-parse-float = "1.0.6"
num-bigint = "0.4.6"
phf = { version = "0.13.1", features = ["macros"] }
serde_core = "1.0.228"
str_enum = { version = "0.3.2", features = ["phf", "serde"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
itertools = "0.14.0"
